--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Stripe Test Server",
   "main": "server.js",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "stripe": "^8.149.0"
   },
   "devDependencies": {},
   "scripts": {
