--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Stripe Test Server",
   "main": "server.js",
   "dependencies": {
+    "axios": "^0.21.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "firebase": "^8.6.2",
     "stripe": "^8.149.0"
   },
   "devDependencies": {},
